bug fixes and text align

--- a/src/app/about-me/about-me.component.scss
+++ b/src/app/about-me/about-me.component.scss
@@ -50,11 +50,12 @@
             display: flex;
             flex-direction: column;
             align-items: center;
+            text-align: center;
             width: 23%;
             height: 50%;
 
             img{
-                width: 25%;
+                width: 15%;
                 height: width;
                 object-fit: cover;
                 border-radius: 100%;
